[package]
name = "vigem"
version = "0.1.0"
authors = ["Sergey Duck <sergeypechnikov326@gmail.com>"]
edition = "2018"
description = "Safe Rust bindings for Vigem"
readme = "README.md"
repository = "https://github.com/DuckerMan/vigem"
keywords = ["rust", "vigem", "xbox360", "xbox"]
license = "GPL-3.0-or-later"

[dependencies]
libloading = "0.6"

[profile.release]
lto = true

[profile.dev]
codegen-units = 3

[build-dependencies]
bindgen = "0.51"