[package]
name = "vigem"
version = "0.6.0"
authors = ["Sergey Duck <sergeypechnikov326@gmail.com>"]
edition = "2018"
description = "Safe Rust bindings for ViGEm"
readme = "README.md"
repository = "https://github.com/DuckerMan/vigem"
keywords = ["rust", "vigem", "xbox360", "xbox"]
license = "GPL-3.0-or-later"
exclude = ["target", "src/binds/*.h", "src/binds/*.cpp", "examples", "gamepad.png"]

[dependencies]
bitflags = "*"
vigem-sys = { path = "./vigem-sys" }

[profile.release]
lto = true

[profile.dev]
codegen-units = 3

